tests/type_args_fatal_assertion_regression/type_args_fatal_assertion_regression.exp
Error: test.js:10
 10: (x: V);
         ^ V. Too many type arguments. Expected at most 1
  7: class T<U> {}
             ^ See type parameters of definition here

Error: test.js:12
 12: (42: empty); // Error: number ~> empty
      ^^ number. This type is incompatible with
 12: (42: empty); // Error: number ~> empty
          ^^^^^ empty


Found 2 errors
